Use correct overflow for content text

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -182,6 +182,8 @@ div.gitxt_file .content {
     font-family: monospace;
     white-space: pre;
     margin: 1em 0;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 /* Gitxt new file modal */
